--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-NODE_ENV=development
-DATABASE_URL=
-JWT_SECRET=
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/web_framework"
+JWT_SECRET="change-me"
+API_PORT=3001
+NEXT_PUBLIC_API_BASE_URL="http://localhost:3001"
