chore: initial commit without node_modules

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "echo dev",
-    "build": "echo build",
-    "test": "echo test",
-    "lint": "echo lint"
+    "dev": "pnpm -r dev",
+    "build": "pnpm -r build",
+    "test": "pnpm -r test",
+    "lint": "pnpm -r lint"
   },
   "repository": {
     "type": "git",
