--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "packageManager": "pnpm@8.15.4",
   "volta": {
-   "node": "18.19.0"
+    "node": "18.19.0"
+  },
+  "devDependencies": {
+    "typescript": "5.4.5"
   }
 }
